*                  V E R S I O N   I N F O R M A T I O N                      *
*******************************************************************************
 
 + = Additions since previous version
 ! = Bug fixes since previous version
 ~ = Changes   since previous version
 - = Features that has been removed

1.9.12 (2013-03-??)
 ! Mapsource OpenStreetMap Maps4u.eu updated 

1.9.11 (2013-02-19)
 ! Bugfix for servers that send case insensitive content-types
 ! Bugfix OruxMapsSQlite final commit was missing (patch #30)
 + New map sources: USGS National Map Base/Satellite/Satellite+/Vector/Topo
 ! Bugfix Garmin Custom Map: Removed possibility to set output format to PNG  

1.9.10 (2012-12-04)
 ! Bugfix Local tile [zip] files in quadkey format causes a 
    NullPointerException when creating an atlas (#229)
 + Custom multi-layer map source can now contain <customWmsMapSource> maps  

1.9.9 (2012-10-09)
 ! Bugfix in PNGW calibration (patch by allib)
 ! RMAPS: Error "failed to retrieve max tile zoom info" fixed (#3561323)
 ! GEMF: Error "NullPointerException" fixed (#3564146)
 ~ OruxMaps: Patch #3300055 applied
 + Custom XML map: <invertYCoordinate> now works in simple XML map, too 
 + Loading multiple GPX files at once into MOBAC (based on patch by heckie) 
 ! Bugfix NullPointerException when aborting atlas download fixed (#3568849)
 + Automatically splitted maps because of the specified maximum map size can 
    now overlap 1-5 tiles 

1.9.8 (2012-07-05)
 ! Viewranger atlas format depends on Java Advanced Imaging without checking
 ! OurxMaps SQLite: Memory handling changed (should prevent OutOfMemoryError)
 ! Fixed progress bar in atlas progress window for large atlases 
 + Possibility added to use SQLite Java Wrapper (ch-werner) instead of default 
    sqlite library 
 ~ Replaced the old SQLite library with recent version of Xerial. This fixes 
    all problems creating databases larger than 2GB on Windows 64bit
 ! CacheWolf: Custom tile processing re-enabled